2020-05-09  Tom Tromey  <tom@tromey.com>

	* symtab.c (fixup_section): Update.
	* symmisc.c (dump_msymbols): Update.
	* symfile.c (reread_symbols): Update.
	* solib-frv.c (frv_relocate_main_executable): Update.
	* solib-dsbt.c (dsbt_relocate_main_executable): Update.
	* maint.c (maint_obj_section_from_bfd_section)
	(print_bfd_section_info_maybe_relocated): Update.
	* machoread.c (macho_symfile_offsets): Update.
	* objfiles.h (ALL_OBJFILE_OSECTIONS): Rewrite iteration.
	(struct objfile) <sections>: Now a std::vector.
	<sections_end>: Remove.
	(is_addr_in_objfile): Remove "const".
	* objfiles.c (add_to_objfile_sections_full): Update comment.
	(build_objfile_section_table): Update.
	(is_addr_in_objfile): Remove "const".

2020-05-09  Tom Tromey  <tom@tromey.com>

	* symfile.c (section_is_overlay, pc_in_unmapped_range)
	(pc_in_mapped_range, sections_overlap, overlay_unmapped_address)
	(overlay_mapped_address): Make parameter const.
	* symfile.h (section_is_overlay, pc_in_mapped_range)
	(pc_in_unmapped_range, overlay_mapped_address)
	(overlay_unmapped_address): Make parameter const.

2020-05-09  Tom Tromey  <tom@tromey.com>

	* symtab.c (fixup_section): Update.
	* solib-aix.c (data_obj_section_from_objfile): Update.
	* ia64-tdep.c (ia64_find_global_pointer_from_dynamic_section)
	(find_extant_func_descr): Update.
	* minsyms.c (frob_address): Update.
	* maint.c (maintenance_translate_address): Update.
	* hppa-linux-tdep.c (hppa_linux_find_global_pointer): Update.
	* machoread.c (macho_symfile_offsets): Update.
	* printcmd.c (info_symbol_command): Update.
	* solib-frv.c (frv_relocate_main_executable): Update.
	* symfile.c (init_entry_point_info, overlay_invalidate_all)
	(find_pc_overlay, find_pc_mapped_section, list_overlays_command)
	(map_overlay_command, unmap_overlay_command)
	(simple_overlay_update): Update.
	* solib-dsbt.c (dsbt_relocate_main_executable): Update.
	* exec.c (add_target_sections_of_objfile): Update.
	* arm-tdep.c (arm_obj_section_from_vma): Update.