@@ -1,5 +1,17 @@
 2020-05-09  Tom Tromey  <tom@tromey.com>
 
+	* progspace.h (current_target_sections): Remove.
+	* solib-svr4.c (scan_dyntag): Don't use current_target_sections.
+	* solib-dsbt.c (scan_dyntag): Don't use current_target_sections.
+	* exec.c (exec_target::close, add_target_sections)
+	(add_target_sections_of_objfile, remove_target_sections)
+	(exec_target::get_section_table, exec_target::files_info)
+	(set_section_command, exec_set_section_address)
+	(exec_target::has_memory, exec_target::has_memory): Don't use
+	current_target_sections.
+
+2020-05-09  Tom Tromey  <tom@tromey.com>
+
 	* symtab.c (fixup_section): Update.
 	* symmisc.c (dump_msymbols): Update.
 	* symfile.c (reread_symbols): Update.
